[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/menu_bgs/menu_empty_background.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons/button01_hover.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/pause_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/buttons/quitbutton_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/button03.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/Wildy Sans.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/buttons/button02_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons/button01.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/buttons/button02.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/buttons/quitbutton.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/buttons/buttontheme.tres" type="Theme" id=12]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 0.882353, 0.847059, 0.776471, 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
outline_size = 2
outline_color = Color( 0.109804, 0.054902, 0.2, 1 )
font_data = ExtResource( 6 )

[node name="PauseScreen" type="Control"]
script = ExtResource( 3 )

[node name="PauseBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Paused" type="Label" parent="."]
margin_left = 800.0
margin_top = 150.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "PAUSED"

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 780.0
margin_top = 400.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 330.0
margin_bottom = 130.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -40.0
margin_right = 100.0
margin_bottom = 36.0
theme = ExtResource( 12 )
text = "Continue"
align = 1

[node name="Options" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 134.0
margin_right = 330.0
margin_bottom = 264.0
theme = ExtResource( 12 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -45.0
margin_right = 105.0
margin_bottom = 31.0
theme = ExtResource( 12 )
text = "options"
align = 1

[node name="Menu" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 268.0
margin_right = 330.0
margin_bottom = 398.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -38.0
margin_right = 63.5
margin_bottom = 38.0
theme = ExtResource( 12 )
text = "menu"

[node name="Quit" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 402.0
margin_right = 330.0
margin_bottom = 532.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="Menu/CenterRow/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
